--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-sqlalchemy
-fastapi
-pytest
-dependency-injector
-uvicorn[standard]
-fastapi
-alembic
-psycopg2-binary
-httpx[http2]
-httpx[socks]
-pytest-asyncio
-requests
-beautifulsoup4
-python-multipart
-python-jose[cryptography]
-passlib[bcrypt]
+sqlalchemy[asyncio]==1.4.31
+fastapi==0.74.1
+pytest==7.0.1
+dependency-injector==4.38.0
+uvicorn[standard]==0.17.5
+alembic==1.7.6
+# psycopg2-binary
+httpx[http2]==0.22.0
+httpx[socks]==0.22.0
+pytest-asyncio==0.18.1
+requests==2.27.1
+beautifulsoup4==4.10.0
+python-multipart==0.0.5
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+mangum==0.13.0
+boto3==1.21.8
+smart-open==5.2.1
+asyncpg==0.25.0
