--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pytest==7.0.1
 dependency-injector==4.38.0
 uvicorn[standard]==0.17.5
 alembic==1.7.6
-# psycopg2-binary
+psycopg2-binary
 httpx[http2]==0.22.0
 httpx[socks]==0.22.0
 pytest-asyncio==0.18.1
